--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Hector/Documents/Hichi U/Estructuras de Datos II/jar_files/jackson-annotations-2.13.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Hector/Documents/Hichi U/Estructuras de Datos II/jar_files/jackson-core-2.13.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Hector/Documents/Hichi U/Estructuras de Datos II/jar_files/jackson-databind-2.13.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
